# pi-camera-stream-flask-picamera2

./: README.md  camera.py  main.py  pyproject.toml
templates/: index.html
