[project]
name = "pi-camera-stream-flask-picamera2"
version = "0.1.0"
description = "Create your own live camera stream using a Raspberry Pi with picamera2"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "flask>=3.0.3",
    "numpy>=2.1.2",
    "opencv-contrib-python>=4.10.0.84",
    "opencv-python>=4.10.0.84",
    "picamera2>=0.3.21",
]
